  * Do not close already closed files in some error conditions in libdpkg.
  * Use the correct units (KiB) in dpkg-split when referring to partsize.
  * Document in dpkg-statoverride(8) that mode needs to be specified in
    octal. Closes: #534551
  * Mark argument names in dpkg-statoverride.1 in italic.
  * Explicitly pass field argument to Dpkg::ErrorHandling::unknown().

  [ Raphael Hertzog ]
  * Unset TAR_OPTIONS when creating/extracting tar archives for source
    packages. Closes: #530860
  * Add cleanup of all invalid (master) alternatives in preinst script.
    Closes: #530633, #531611, #532739, #521760
  * Let update-alternatives fix a manual alternative with a dangling symlink
    by switching it to automatic mode. Closes: #529999
  * Add missing paragraph separator in dpkg-buildpackage(1). Thanks to Per
    Andersson <avtobiff@gmail.com>. Closes: #532769
  * Fix english mistake (“as you request” → “as you requested”) in several
    places. Thanks to David Stansby for the patch. Closes: #533171
  * Support tags before symbols in symbols file contained in source packages.
    The first two tags are "optional" (use it to not fail if the symbol might
    disappear from the library without breaking the ABI) and "arch" to
    restrict the set of architectures where the symbol is supposed to exist.
    Thanks to Modestas Vainius <modestas@vainius.eu> for the patch.
    See dpkg-gensymbols(1) for more information. Closes: #521551
  * Do not include #MISSING lines in symbols files integrated in binary
    packages. Closes: #526251
  * Assume an implicit version of "Base" for all unversioned symbols
    that are merged into a SymbolFile. Closes: #533181
  * Add new tag "ignore-blacklist" to force-include symbols which are
    normally blacklisted. This can be useful for libgcc to include symbols
    that the toolchain allows to be shared but that are often static (and
    hence are blacklisted for this reason). Closes: #533642