@@ -4,9 +4,11 @@ use strict;
 use warnings;
 
 use base qw(Exporter);
+use Dpkg::Gettext;
+use Dpkg::ErrorHandling;
 use Dpkg::Deps qw(@src_dep_fields @pkg_dep_fields);
 
-our @EXPORT_OK = qw(capit %control_src_fields %control_pkg_fields
+our @EXPORT_OK = qw(capit unknown %control_src_fields %control_pkg_fields
     $control_src_field_regex $control_pkg_field_regex);
 our %EXPORT_TAGS = ('list' => [qw(%control_src_fields %control_pkg_fields
 			$control_src_field_regex $control_pkg_field_regex)]);
@@ -31,6 +33,14 @@ our $control_pkg_field_regex = "(?:" . join("|", keys %control_pkg_fields) . ")"
 sub capit {
     my @pieces = map { ucfirst(lc) } split /-/, $_[0];
     return join '-', @pieces;
+}
+
+sub unknown($$)
+{
+    my ($field, $desc) = @_;
+
+    warning(_g("unknown information field '%s' in input data in %s"),
+            $field, $desc);
 }
 
 package Dpkg::Fields::Object;
