@@ -9,9 +9,9 @@ use English;
 use Dpkg;
 use Dpkg::Gettext;
 use Dpkg::Checksums;
-use Dpkg::ErrorHandling qw(:DEFAULT unknown);
+use Dpkg::ErrorHandling;
 use Dpkg::Arch qw(get_host_arch debarch_eq debarch_is);
-use Dpkg::Fields qw(:list capit);
+use Dpkg::Fields qw(:list capit unknown);
 use Dpkg::Compression;
 use Dpkg::Control;
 use Dpkg::Cdata;
