@@ -11,6 +11,7 @@ dpkg (1.15.3) UNRELEASED; urgency=low
     octal. Closes: #534551
   * Mark argument names in dpkg-statoverride.1 in italic.
   * Explicitly pass field argument to Dpkg::ErrorHandling::unknown().
+  * Move unknown() from Dpkg::ErrorHandling to Dpkg::Fields.
 
   [ Raphael Hertzog ]
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
